[gd_scene load_steps=5 format=3 uid="uid://dtojdotmm2l52"]

[ext_resource type="Script" uid="uid://cfna438uphhr6" path="res://Scripts/game_mode.gd" id="1_0wnff"]
[ext_resource type="PackedScene" uid="uid://bbruuaoq5mbfe" path="res://Scenes/PlayerSelect.tscn" id="2_ftnhc"]
[ext_resource type="Texture2D" uid="uid://rytpuxxxsl1w" path="res://Assets/Images/Backgrounds/violet_pattern_background.jpg" id="3_d1vur"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d1vur"]
bg_color = Color(0.19434926, 0.19434929, 0.1943492, 0.827451)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="GameMode" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0wnff")
defaultPlayer = ExtResource("2_ftnhc")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_d1vur")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(160, 160)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 40

[node name="PlayerContainer" type="VBoxContainer" parent="MarginContainer"]
layout_direction = 2
layout_mode = 2
size_flags_vertical = 0

[node name="SelectionContainer" type="HBoxContainer" parent="MarginContainer/PlayerContainer"]
custom_minimum_size = Vector2(1300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/separation = 360
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d1vur")

[node name="TurnContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TurnText" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/TurnContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Turns: 10 "
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/PanelContainer/TurnContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 1.0
max_value = 20.0
value = 10.0
tick_count = 19

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="MarginContainer/ButtonContainer"]
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="AddButton" type="Button" parent="MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Add Player"

[node name="BackToMain" type="Button" parent="MarginContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back to Main
"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/PanelContainer/TurnContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="MarginContainer/ButtonContainer/BackToMain" to="." method="_on_back_to_main_pressed"]
